RESOLVED FIXED245739
[GStreamer] Fix player stucking in buffering (paused) state for progressive streaming
https://bugs.webkit.org/show_bug.cgi?id=245739
Summary [GStreamer] Fix player stucking in buffering (paused) state for progressive s...
Enrique Ocaña
Reported 2022-09-27 09:18:20 PDT
When play state is changed from PAUSED to PLAYING and buffering is detected in the same updateStates() run, the pipeline state is changed back to PAUSED just before triggering playbackStateChanged() notification. As a result, at the time of running playbackStateChanged() player is already marked as paused, triggering pauseInternal() from HTMLMediaElement. Once the buffering is completed and the player tries to change pipeline state from PAUSED back to PLAYING (setting ReadyState and NetworkState accordingly), it is instantly blocked by HTMLMediaElement (from setReadyState()->updatePlayState()) as according to the HTMLMediaPlayer object the player should be paused (shouldBePlaying evaluates to false). In that case, m_player->pause() is called, bringing player back to PAUSED state. As a result, the player can't really exit buffering state by its own and requires external input (like HTMLMediaElement::play()). See: https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/945
Attachments
Enrique Ocaña
Comment 1 2022-09-27 09:32:26 PDT
EWS
Comment 2 2022-10-04 01:26:35 PDT
Committed 255113@main (b72b805d48b6): <https://commits.webkit.org/255113@main> Reviewed commits have been landed. Closing PR #4757 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-10-04 01:27:21 PDT
Note You need to log in before you can comment on or make changes to this bug.