[GStreamer] Fix player stucking in buffering (paused) state for progressive streaming https://bugs.webkit.org/show_bug.cgi?id=245739

Reviewed by Philippe Normand.

When play state is changed from PAUSED to PLAYING and buffering is
detected in the same updateStates() run, the pipeline state is changed
back to PAUSED just before triggering playbackStateChanged()
notification. As a result, at the time of running playbackStateChanged()
player is already marked as paused, triggering pauseInternal() from
HTMLMediaElement.

Once the buffering is completed and the player tries to change pipeline
state from PAUSED back to PLAYING (setting ReadyState and NetworkState
accordingly), it is instantly blocked by HTMLMediaElement (from
setReadyState()->updatePlayState()) as according to the HTMLMediaPlayer
object the player should be paused (shouldBePlaying evaluates to false).
In that case, m_player->pause() is called, bringing player back to
PAUSED state. As a result, the player can't really exit buffering state
by its own and requires external input (like HTMLMediaElement::play()).

This patch fixes stucking in paused state when seeking in Spotify app
(for progressive content only) and random timeouts in YouTube
Progressive tests. Both happens reandomly and seems to be strongly
related to network conditions.

In order to get the m_isBuffering delayed to change to false work, the
recomputation of such attribute in updateStates() has been fixed.
Before, it would be considered that the browser was buffering when the
buffer level was 100% (which makes no sense). Now, that's only
considered when the buffer level is less that 100%.

Original author: Andrzej Surdej <Andrzej_Surdej@comcast.com>
See: https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/945

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::updateBufferingStatus): Fix detecting buffering completed from queue messages. Don't reset m_isBuffering as it's used by updateStates() to check if buffering was there at all.
(WebCore::MediaPlayerPrivateGStreamer::updateStates): Don't emit playbackStateChanged() if the player has just been paused for buffering. The event will be emitted after buffering is completed. Buffering state recomputation has now been fixed.

Canonical link: https://commits.webkit.org/255113@main